--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 <body class="lgp">
 
-<div id="wrapper">
-  <div id="header">
+<main id="wrapper">
+  <header id="header">
  <a href="/" title="На главную"><img src="images/logo.png" alt="Воздушные винты для сверхлегких летательных аппаратов" class="logo" /></a>
   <div class="contacts">
   
@@ -50,9 +50,10 @@ Skype: konotop57
 </div>
   </div>
     
-  </div><!-- end #header -->
+  </header><!-- end #header -->
   <span class="clearfloat"></span>
-   <div id="mainContent">
+   <section id="mainContent">
+     <article>
    <h1>Мы возобновили работу! Будем рады вашим заказам</h1>
 
 
@@ -61,22 +62,40 @@ Skype: konotop57
 
     <p>
       Частный предприниматель Конотоп Александр Васильевич (ЧП Конотоп) – производитель <strong>воздушных винтов для сверхлегкиx летательных аппаратов</strong> (СЛА): самолетов, дельталетов, автожиров, парапланов в Луганске. Коллектив ЧП состоит из группы специалистов, которые имеют многолетний опыт работы с композиционными материалами. </p>
-<div style="text-align: center;"><a href="images/prop1.jpg" rel="lightbox"><img src="images/prop1.jpg" style="width:300px" alt="Воздушные винты из композитных материалов" class="bordered"></a></div>
+<div style="text-align: center;"><a href="images/prop1.jpg" rel="lightbox">
+  <figure>
+      <img src="images/prop1.jpg" style="width:300px" alt="Воздушные винты из композитных материалов" class="bordered">
+  </figure>
+</a></div>
+
       <p>Коллектив ЧП Конотоп с 2003 года занимается разработкой, проектированием, изготовлением и испытаниями своих изделий.</p>
       <p>Мы сотрудничаем с производителями летательных аппаратов, как в Украине, так и за рубежом. Благодаря информации, поступающей от наших клиентов, производится анализ потребительского рынка с целью улучшения качества продукции.</p> 
      <p>На сегодняшний день ведется активная работа с изготовителем втулок для <strong><a href="http://lugaprop.com.ua/goods.php" title="Смотреть продукцию">винтов изменяемого шага</a></strong>, винты такого типа находят своё применение не только на летательных аппаратах, но и на аэроглиссерах и аэросанях.</p>
 
-      <p>Модельный ряд представляют 2-, 3-, 4- и 5-лопастные <strong>воздушные винты</strong>, диаметром от 400 мм до 1860 мм. Особое внимание стоит уделить винтам с лопастями саблевидной формы, они обеспечивают низкий уровень шума, а также высокие летно-технические показатели.  Воздушные винты предназначены для установки на двигатели от 5 л.с. до 130 л.с. </p>
-	  
-
-<div style="text-align: center;"><a href="images/prop2.jpg" rel="lightbox"><img src="images/prop2.jpg" style="width:300px" alt="Изготовляемые воздушные винты" class="bordered"/></a></div>
+      <p>Модельный ряд представляют 2-, 3-, 4- и 5-лопастные <strong>воздушные винты</strong>, диаметром от 400 мм до 1860 мм. Особое внимание стоит уделить винтам с лопастями саблевидной формы, они обеспечивают низкий уровень шума, а также высокие летно-технические показатели.  Воздушные винты предназначены для установки на двигатели от 5 л.с. до 130 л.с. </p>	  
+</article>
+    <article>
+<div style="text-align: center;"><a href="images/prop2.jpg" rel="lightbox">
+  <figure>
+      <img src="images/prop2.jpg" style="width:300px" alt="Изготовляемые воздушные винты" class="bordered"/>
+  </figure>
+</a></div>
       <p>Прочностные испытания были проведены в  лаборатории прочности ХАИ, при активной помощи специалистов Восточноукраинского национального университета им. В. Даля.</p>
-	  <div style="text-align: center;"><a href="images/xai.jpg" rel="lightbox"><img src="images/xai.jpg" style="width:300px" alt="Тестирование продукции на прочность" class="bordered"/></a></div>
-
+    <div style="text-align: center;"><a href="images/xai.jpg" rel="lightbox">
+      <figure>  
+          <img src="images/xai.jpg" style="width:300px" alt="Тестирование продукции на прочность" class="bordered"/></a></div>
+      </figure>
+    </article>
+    <article>
       <p>Продукция защищена патентами. </p>
-	  <div style="text-align: center;"><a href="images/patent.jpg" rel="lightbox"><img src="images/patent.jpg" style="width:600px" alt="Разработка воздушных винтов защищена патенами" class="bordered"/></a></div>
-	<!-- end #mainContent --></div>
-<div id="sidebar1">
+    <div style="text-align: center;"><a href="images/patent.jpg" rel="lightbox">
+      <figure>    
+          <img src="images/patent.jpg" style="width:600px" alt="Разработка воздушных винтов защищена патенами" class="bordered"/></a></div>
+      </figure>
+    </article>
+  <!-- end #mainContent --></section>
+  <aside>
+<nav id="sidebar1">
 <h3>Меню</h3>
 	<ul>
 		<li><a href="index.html">Главная</a></li>
@@ -93,14 +112,15 @@ Skype: konotop57
 	<li><strong><a href="http://lugaprop.com.ua/news.php">Начато производство новых моделей саблевидных винтов</a></strong></li>
 	<li><a href="http://lugaprop.com.ua/sborka.php">Сборка и хранение воздушного винта</a></li>
 	</ul>
-<!-- end #sidebar1 --></div>
+<!-- end #sidebar1 --></nav>
+  </aside>
  
 	<!-- This clearing element should immediately follow the #mainContent div in order to force the #wrapper div to contain all child floats --><br class="clearfloat"/>
-   <div id="footer">
+   <footer id="footer">
     <p style="font-weight:bold;">2015 ©  ЧП Конотоп А. В. Пропеллеры для сверхмалых летательных аппаратов: самолетов, дельталетов, автожиров, парапланов</p>
 
-  <!-- end #footer --></div>
-<!-- end #wrapper --></div>
+  <!-- end #footer --></footer>
+<!-- end #wrapper --></main>
 
 
 <div id="overlay" style="visibility: hidden; opacity: 0;"></div></body></html>
