--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 <body class="lgp">
 
-<main id="wrapper">
-  <header id="header">
+<main>
+  <header>
  <a href="/" title="На главную"><img src="images/logo.png" alt="Воздушные винты для сверхлегких летательных аппаратов" class="logo" /></a>
   <div class="contacts">
   
@@ -52,7 +52,7 @@ Skype: konotop57
     
   </header><!-- end #header -->
   <span class="clearfloat"></span>
-   <section id="mainContent">
+   <section>
      <article>
    <h1>Мы возобновили работу! Будем рады вашим заказам</h1>
 
@@ -62,7 +62,8 @@ Skype: konotop57
 
     <p>
       Частный предприниматель Конотоп Александр Васильевич (ЧП Конотоп) – производитель <strong>воздушных винтов для сверхлегкиx летательных аппаратов</strong> (СЛА): самолетов, дельталетов, автожиров, парапланов в Луганске. Коллектив ЧП состоит из группы специалистов, которые имеют многолетний опыт работы с композиционными материалами. </p>
-<div style="text-align: center;"><a href="images/prop1.jpg" rel="lightbox">
+<div style="text-align: center;">
+  <a href="images/prop1.jpg" rel="lightbox">
   <figure>
       <img src="images/prop1.jpg" style="width:300px" alt="Воздушные винты из композитных материалов" class="bordered">
   </figure>
@@ -75,27 +76,28 @@ Skype: konotop57
       <p>Модельный ряд представляют 2-, 3-, 4- и 5-лопастные <strong>воздушные винты</strong>, диаметром от 400 мм до 1860 мм. Особое внимание стоит уделить винтам с лопастями саблевидной формы, они обеспечивают низкий уровень шума, а также высокие летно-технические показатели.  Воздушные винты предназначены для установки на двигатели от 5 л.с. до 130 л.с. </p>	  
 </article>
     <article>
-<div style="text-align: center;"><a href="images/prop2.jpg" rel="lightbox">
-  <figure>
+<div style="text-align: center;">
+  <a href="images/prop2.jpg" rel="lightbox">
+
       <img src="images/prop2.jpg" style="width:300px" alt="Изготовляемые воздушные винты" class="bordered"/>
-  </figure>
-</a></div>
+
+</a>
+</div>
       <p>Прочностные испытания были проведены в  лаборатории прочности ХАИ, при активной помощи специалистов Восточноукраинского национального университета им. В. Даля.</p>
-    <div style="text-align: center;"><a href="images/xai.jpg" rel="lightbox">
-      <figure>  
+    <div style="text-align: center;">
+      <a href="images/xai.jpg" rel="lightbox">
           <img src="images/xai.jpg" style="width:300px" alt="Тестирование продукции на прочность" class="bordered"/></a></div>
-      </figure>
     </article>
     <article>
       <p>Продукция защищена патентами. </p>
     <div style="text-align: center;"><a href="images/patent.jpg" rel="lightbox">
-      <figure>    
+  
           <img src="images/patent.jpg" style="width:600px" alt="Разработка воздушных винтов защищена патенами" class="bordered"/></a></div>
-      </figure>
+  
     </article>
   <!-- end #mainContent --></section>
   <aside>
-<nav id="sidebar1">
+<nav>
 <h3>Меню</h3>
 	<ul>
 		<li><a href="index.html">Главная</a></li>
@@ -116,7 +118,7 @@ Skype: konotop57
   </aside>
  
 	<!-- This clearing element should immediately follow the #mainContent div in order to force the #wrapper div to contain all child floats --><br class="clearfloat"/>
-   <footer id="footer">
+   <footer>
     <p style="font-weight:bold;">2015 ©  ЧП Конотоп А. В. Пропеллеры для сверхмалых летательных аппаратов: самолетов, дельталетов, автожиров, парапланов</p>
 
   <!-- end #footer --></footer>
